--- a/Android/Scrummerz/app/src/main/res/layout/activity_assignment.xml
+++ b/Android/Scrummerz/app/src/main/res/layout/activity_assignment.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bglogin"
+    android:background="@mipmap/bg"
     tools:context="se.newton.scrummerz.assignment">
 
     <TextView
@@ -41,11 +41,11 @@
         android:layout_marginBottom="0dp"
         android:layout_marginLeft="0dp"
         android:layout_marginRight="0dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/assignmentsTxtView"
         app:layout_constraintVertical_bias="1.0" />
 </android.support.constraint.ConstraintLayout>
