--- a/Android/Scrummerz/app/src/main/res/layout/activity_scanner.xml
+++ b/Android/Scrummerz/app/src/main/res/layout/activity_scanner.xml
@@ -66,7 +66,7 @@
         android:layout_marginLeft="0dp"
         android:layout_marginRight="0dp"
         android:layout_marginTop="0dp"
-        android:background="@android:color/white"
+        android:background="@color/common_google_signin_btn_text_light_disabled"
         android:elevation="10dp"
         ads:layout_constraintBottom_toBottomOf="parent"
         ads:layout_constraintLeft_toLeftOf="parent"
