--- a/Android/Scrummerz/app/src/main/res/layout/activity_signed_in_start.xml
+++ b/Android/Scrummerz/app/src/main/res/layout/activity_signed_in_start.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bglogin"
+    android:background="@mipmap/bg"
     tools:context="se.newton.scrummerz.signedInStart">
 
     <TextView
@@ -14,7 +14,7 @@
         android:layout_marginLeft="0dp"
         android:layout_marginTop="16dp"
         android:text="Registrera närvaro"
-        android:textColor="@color/common_google_signin_btn_text_dark_default"
+        android:textColor="@color/cardview_dark_background"
         android:textSize="24sp"
         app:layout_constraintLeft_toLeftOf="@+id/myCoursesTextView"
         app:layout_constraintTop_toBottomOf="@+id/myGradesTextView" />
@@ -23,83 +23,83 @@
         android:id="@+id/myGradesTextView"
         android:layout_width="154dp"
         android:layout_height="30dp"
+        android:layout_marginLeft="0dp"
         android:layout_marginTop="16dp"
         android:text="Mina betyg"
-        android:textColor="@color/common_google_signin_btn_text_dark_default"
+        android:textColor="@color/cardview_dark_background"
         android:textSize="24sp"
         app:layout_constraintLeft_toLeftOf="@+id/myCoursesTextView"
-        app:layout_constraintTop_toBottomOf="@+id/myCoursesTextView"
-        android:layout_marginLeft="0dp" />
+        app:layout_constraintTop_toBottomOf="@+id/myCoursesTextView" />
 
     <TextView
         android:id="@+id/feedbackTextView"
         android:layout_width="154dp"
         android:layout_height="30dp"
-        android:text="Ge feedback"
-        android:textColor="@color/common_google_signin_btn_text_dark_default"
-        android:textSize="24sp"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="@+id/welcome"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
-        app:layout_constraintTop_toBottomOf="@+id/welcome"
-        android:layout_marginStart="8dp" />
+        android:text="Ge feedback"
+        android:textColor="@color/cardview_dark_background"
+        android:textSize="24sp"
+        app:layout_constraintLeft_toLeftOf="@+id/welcome"
+        app:layout_constraintTop_toBottomOf="@+id/welcome" />
 
     <TextView
         android:id="@+id/myCoursesTextView"
         android:layout_width="154dp"
         android:layout_height="31dp"
+        android:layout_marginLeft="-4dp"
         android:layout_marginTop="16dp"
         android:clickable="true"
         android:text="Mina kurser"
-        android:textColor="@color/common_google_signin_btn_text_dark_default"
+        android:textColor="@color/cardview_dark_background"
         android:textSize="24sp"
         app:layout_constraintLeft_toLeftOf="@+id/feedbackTextView"
-        app:layout_constraintTop_toBottomOf="@+id/feedbackTextView"
-        android:layout_marginLeft="-4dp" />
+        app:layout_constraintTop_toBottomOf="@+id/feedbackTextView" />
 
     <TextView
         android:id="@+id/welcome"
         android:layout_width="361dp"
         android:layout_height="0dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:text="Välkommen"
         android:textAlignment="center"
-        android:textColor="@color/common_google_signin_btn_text_dark_default"
+        android:textColor="@color/cardview_dark_background"
         android:textSize="24sp"
+        app:layout_constraintHorizontal_bias="0.571"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.571"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="32dp" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hur känner du dig idag?"
-        android:textColor="@android:color/white"
-        android:textSize="24sp"
+        android:layout_marginBottom="80dp"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
+        android:text="Hur känner du dig idag?"
+        android:textColor="@color/cardview_dark_background"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="80dp" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <ImageButton
         android:id="@+id/negative"
         android:layout_width="70dp"
         android:layout_height="68dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="0dp"
         android:background="@android:color/transparent"
         android:scaleType="fitCenter"
         app:layout_constraintLeft_toLeftOf="@+id/textView5"
-        app:srcCompat="@drawable/scared"
-        android:layout_marginLeft="0dp"
-        android:layout_marginTop="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        app:layout_constraintTop_toBottomOf="@+id/textView5"
+        app:srcCompat="@drawable/scared" />
 
     <ImageButton
         android:id="@+id/neutral"
@@ -120,12 +120,24 @@
         android:id="@+id/positive"
         android:layout_width="70dp"
         android:layout_height="68dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginTop="0dp"
         android:background="@android:color/transparent"
         android:scaleType="fitCenter"
-        app:srcCompat="@drawable/cool"
-        android:layout_marginRight="0dp"
         app:layout_constraintRight_toRightOf="@+id/textView5"
-        android:layout_marginTop="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        app:layout_constraintTop_toBottomOf="@+id/textView5"
+        app:srcCompat="@drawable/cool" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="282dp"
+        android:layout_height="86dp"
+        app:srcCompat="@drawable/portalen"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
