--- a/Android/Scrummerz/app/src/main/res/layout/activity_course_info.xml
+++ b/Android/Scrummerz/app/src/main/res/layout/activity_course_info.xml
@@ -104,6 +104,7 @@
         android:layout_height="56dp"
         android:layout_marginBottom="8dp"
         android:layout_marginRight="16dp"
+        android:background="@color/cardview_light_background"
         android:text="Uppgifter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
