--- a/Android/Scrummerz/app/src/main/res/layout/activity_signed_in_start.xml
+++ b/Android/Scrummerz/app/src/main/res/layout/activity_signed_in_start.xml
@@ -32,30 +32,17 @@
         app:layout_constraintTop_toBottomOf="@+id/myCoursesTextView" />
 
     <TextView
-        android:id="@+id/feedbackTextView"
-        android:layout_width="154dp"
-        android:layout_height="30dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
-        android:text="@string/giveFeedback"
-        android:textColor="@color/cardview_dark_background"
-        android:textSize="24sp"
-        app:layout_constraintLeft_toLeftOf="@+id/welcome"
-        app:layout_constraintTop_toBottomOf="@+id/welcome" />
-
-    <TextView
         android:id="@+id/myCoursesTextView"
         android:layout_width="154dp"
         android:layout_height="31dp"
-        android:layout_marginLeft="-4dp"
-        android:layout_marginTop="16dp"
         android:clickable="true"
         android:text="@string/menuMyCourses"
         android:textColor="@color/cardview_dark_background"
         android:textSize="24sp"
-        app:layout_constraintLeft_toLeftOf="@+id/feedbackTextView"
-        app:layout_constraintTop_toBottomOf="@+id/feedbackTextView" />
+        android:layout_marginTop="30dp"
+        app:layout_constraintTop_toBottomOf="@+id/welcome"
+        android:layout_marginLeft="16dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <TextView
         android:id="@+id/welcome"
@@ -79,7 +66,7 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="80dp"
+        android:layout_marginBottom="100dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:text="@string/feelingToday"
@@ -87,14 +74,15 @@
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.504" />
 
     <ImageButton
         android:id="@+id/negative"
         android:layout_width="70dp"
         android:layout_height="68dp"
         android:layout_marginLeft="0dp"
-        android:layout_marginTop="0dp"
+        android:layout_marginTop="8dp"
         android:background="@android:color/transparent"
         android:scaleType="fitCenter"
         app:layout_constraintLeft_toLeftOf="@+id/textView5"
@@ -107,10 +95,10 @@
         android:layout_height="68dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="0dp"
+        android:layout_marginTop="8dp"
         android:background="@android:color/transparent"
         android:scaleType="fitCenter"
-        app:layout_constraintHorizontal_bias="0.487"
+        app:layout_constraintHorizontal_bias="0.484"
         app:layout_constraintLeft_toLeftOf="@+id/textView5"
         app:layout_constraintRight_toRightOf="@+id/textView5"
         app:layout_constraintTop_toBottomOf="@+id/textView5"
@@ -121,7 +109,7 @@
         android:layout_width="70dp"
         android:layout_height="68dp"
         android:layout_marginRight="0dp"
-        android:layout_marginTop="0dp"
+        android:layout_marginTop="8dp"
         android:background="@android:color/transparent"
         android:scaleType="fitCenter"
         app:layout_constraintRight_toRightOf="@+id/textView5"
@@ -134,7 +122,7 @@
         android:layout_height="86dp"
         app:srcCompat="@drawable/portalen"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="32dp"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
