--- a/Android/Scrummerz/app/src/main/res/layout/activity_assignment_info.xml
+++ b/Android/Scrummerz/app/src/main/res/layout/activity_assignment_info.xml
@@ -23,20 +23,20 @@
 
     <ScrollView
         android:id="@+id/SCROLLER_ID"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="394dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
         android:fillViewport="true"
         android:scrollbars="vertical"
-        android:layout_marginTop="24dp"
-        app:layout_constraintTop_toBottomOf="@+id/assignmentName"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
+        app:layout_constraintHorizontal_bias="0.32"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:layout_constraintHorizontal_bias="0.0">
+        app:layout_constraintTop_toBottomOf="@+id/assignmentName"
+        app:layout_constraintVertical_bias="0.0">
 
         <TextView
             android:id="@+id/assignmentInfo"
@@ -54,7 +54,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/assignmentName"
-            app:layout_constraintVertical_bias="0.0"/>
+            app:layout_constraintVertical_bias="0.0" />
     </ScrollView>
 
 
