--- a/Android/Scrummerz/app/src/main/res/layout/activity_assignment_info.xml
+++ b/Android/Scrummerz/app/src/main/res/layout/activity_assignment_info.xml
@@ -18,16 +18,20 @@
         app:layout_constraintHorizontal_bias="0.025"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
 
 
     <ScrollView
         android:id="@+id/SCROLLER_ID"
-        android:layout_width="match_parent"
-        android:layout_height="394dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginBottom="16dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:fillViewport="true"
         android:scrollbars="vertical"
